# EpochDataSDK

./: .env  .gitignore  CMakeLists.txt  README.md  vcpkg.json
cmake/: EpochCore.cmake  EpochDataSDK.cmake  EpochDataSDKConfig.cmake.in  EpochFrame.cmake
examples/: polygon_with_drogon.cpp
include/epoch_data_sdk/polygon/: enums.hpp  options.hpp  polygon_client.hpp
include/epoch_data_sdk/tradingeconomics/: error.hpp  models.hpp  options.hpp  tradingeconomics_client.hpp
src/: CMakeLists.txt
src/common/: event_loop_helper.hpp
src/polygon/: CMakeLists.txt  error.hpp  models.hpp  options.hpp  polygon_client.cpp  polygon_client.hpp  websocket_client.cpp  websocket_client.hpp
src/tradingeconomics/: CMakeLists.txt  tradingeconomics_client.cpp
test/: CMakeLists.txt  catch_main.cpp
test/polygon/: CMakeLists.txt  drogon_loop_test.cpp  financials_live_test.cpp  rest_tests.cpp  websocket_tests.cpp
test/tradingeconomics/: CMakeLists.txt  rest_tests.cpp
